cncProd/force-app/main/default/objects/Accs_Rate_Master__c/Accs_Rate_Master__c.object-meta.xml
<CustomObject>
    <description>Accessories Rate master contain the rate for accessories. Different accessories have different rate</description>
    <label>Accs Rate Master</label>
    <nameField>
        <displayFormat>ARM-{0000000000}</displayFormat>
        <label>Accs Rate Master ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accs Rate Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>