cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_ACM_ACCSCD__c.field-meta.xml
<CustomField>
    <fullName>ARM_ACM_ACCSCD__c</fullName>
    <label>ARM_ACM_ACCSCD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>