cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_CREATEDBY__c.field-meta.xml
<CustomField>
    <fullName>ARM_CREATEDBY__c</fullName>
    <label>ARM_CREATEDBY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>