cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_CREATEDDT__c.field-meta.xml
<CustomField>
    <fullName>ARM_CREATEDDT__c</fullName>
    <label>ARM_CREATEDDT</label>
    <type>DateTime</type>
</CustomField>