cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_EFFDT__c.field-meta.xml
<CustomField>
    <fullName>ARM_EFFDT__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>