cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_LASTUPDDT__c.field-meta.xml
<CustomField>
    <fullName>ARM_LASTUPDDT__c</fullName>
    <label>ARM_LASTUPDDT</label>
    <type>DateTime</type>
</CustomField>