cncProd/force-app/main/default/objects/Accs_Rate_Master__c/fields/ARM_SALEPRICE__c.field-meta.xml
<CustomField>
    <fullName>ARM_SALEPRICE__c</fullName>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>